@@ -1,0 +1,98 @@
+Makefile
+*.o
+*~
+*.a
+*.lo
+config.log
+config.status
+db4/PORT/.libs/
+db4/PORT/clib_port.h
+db4/PORT/config.log
+db4/PORT/config.status
+db4/PORT/db.h
+db4/PORT/db185_int.h
+db4/PORT/db_185.h
+db4/PORT/db_archive
+db4/PORT/db_checkpoint
+db4/PORT/db_config.h
+db4/PORT/db_cxx.h
+db4/PORT/db_deadlock
+db4/PORT/db_dump
+db4/PORT/db_hotbackup
+db4/PORT/db_int.h
+db4/PORT/db_load
+db4/PORT/db_printlog
+db4/PORT/db_recover
+db4/PORT/db_sql
+db4/PORT/db_stat
+db4/PORT/db_upgrade
+db4/PORT/db_verify
+db4/PORT/include.tcl
+db4/PORT/libdb-4.8.la
+db4/PORT/libtool
+itcl/config.log
+itcl/config.status
+itcl/itcl/config.log
+itcl/itcl/config.status
+itcl/itcl/itclConfig.sh
+itcl/itcl/pkgIndex.tcl
+itcl/itk/config.log
+itcl/itk/config.status
+itcl/itk/itkConfig.sh
+itcl/itk/pkgIndex.tcl
+libgui/config.h
+libgui/config.log
+libgui/config.status
+libgui/stamp-h1
+snavigator/config.h
+snavigator/config.log
+snavigator/config.status
+snavigator/db/dbcompact
+snavigator/db/dbcp
+snavigator/db/dbdump
+snavigator/db/dbimp
+snavigator/etc/english.txt
+snavigator/etc/french.txt
+snavigator/etc/german.txt
+snavigator/etc/sn_prop.cfg
+snavigator/hyper/hyper
+snavigator/parsers/assembly/intel8085/config.h
+snavigator/parsers/assembly/intel8085/config.log
+snavigator/parsers/assembly/intel8085/config.status
+snavigator/parsers/assembly/intel8085/ibrowser
+snavigator/parsers/assembly/intel8085/stamp-h1
+snavigator/parsers/assembly/ppc601-eabi/abrowser
+snavigator/parsers/assembly/ppc601-eabi/config.h
+snavigator/parsers/assembly/ppc601-eabi/config.log
+snavigator/parsers/assembly/ppc601-eabi/config.status
+snavigator/parsers/assembly/ppc601-eabi/stamp-h1
+snavigator/parsers/cobol/obrowser
+snavigator/parsers/cpp/cbrowser
+snavigator/parsers/cpp/cbrowser2
+snavigator/parsers/example/exlbrowser
+snavigator/parsers/fortran/fbrowser
+snavigator/parsers/java/jbrowser
+snavigator/parsers/m4/m4browser
+snavigator/parsers/php/phpbrowser
+snavigator/parsers/python/pybrowser
+snavigator/parsers/sendmail/.deps/
+snavigator/parsers/sendmail/sbrowser
+snavigator/parsers/tcl/tbrowser
+snavigator/snavigator/unix/snscenario
+snavigator/stamp-h1
+tcl/config.log
+tcl/config.status
+tcl/unix/config.log
+tcl/unix/config.status
+tcl/unix/tclConfig.sh
+tcl/unix/tclsh
+tix/config.log
+tix/config.status
+tix/pkgIndex.tcl
+tix/tixConfig.sh
+tk/config.log
+tk/config.status
+tk/unix/config.log
+tk/unix/config.status
+tk/unix/tkConfig.sh
+tk/unix/wish
