@@ -606,7 +606,6 @@ set auto_index(Entry&) [list source [file join $dir tools.tcl]]
 set auto_index(Radio&) [list source [file join $dir tools.tcl]]
 set auto_index(CheckButton&) [list source [file join $dir tools.tcl]]
 set auto_index(LabelEntryButton&) [list source [file join $dir tools.tcl]]
-set auto_index(ChooseColor&) [list source [file join $dir tools.tcl]]
 set auto_index(ChooseFont&) [list source [file join $dir tools.tcl]]
 set auto_index(Color&) [list source [file join $dir tools.tcl]]
 set auto_index(Tree) [list source [file join $dir tree.tcl]]
